# mcp-governance-kit

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-docs  NOTICE  README.md  SECURITY.md  SPEC.md  action.yml  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
docs/: index.md  paper.md  quickstart.md  release-checklist.md  spec.md
docs/concepts/: attestation.md  breakpoints.md  tcs.md
docs/guides/: auditor-handbook.md  ci-integration.md  policy-authoring.md
examples/: README.md  c1-conservative.mcp.json  c2-analyst.mcp.json  c3-developer.mcp.json  c4-full-stack.mcp.json  c5-security-research.mcp.json
paper/: CITATION.cff
policies/: default.yaml  developer.yaml  restricted.yaml
scripts/: export_schema.py
src/mcp_governance_kit/: __init__.py  cli.py
src/mcp_governance_kit/attest/: __init__.py  build.py  classify.py  collect.py  schema.py  sign.py
src/mcp_governance_kit/attest/schemas/: attestation-v0.schema.json
src/mcp_governance_kit/breakpoints/: __init__.py  b1_change.py  b2_thirdparty.py  b3_dlp.py  b4_privilege.py  b5_audit.py  b6_capability_state.py  base.py
src/mcp_governance_kit/integrations/: __init__.py  claude_code_hook.py  pre_commit.py
src/mcp_governance_kit/mappings/: __init__.py  eu-ai-act.yaml  iso42001-annex-a.yaml  nist-ai-600-1.yaml
src/mcp_governance_kit/policy/: __init__.py  engine.py
src/mcp_governance_kit/tcs/: __init__.py  models.py  reference.py  score.py  sensitivity.py  weights.py
tests/: conftest.py
tests/unit/: test_attest_pipeline.py  test_attest_schema.py  test_breakpoints.py  test_integrations.py  test_policy_and_mappings.py  test_smoke.py  test_tcs_score.py  test_tcs_sensitivity.py
