[build-system]
requires = ["hatchling>=1.24", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[project]
name = "mcp-governance-kit"
dynamic = ["version"]
description = "Runtime capability-state attestation and Tool Graph Capability Score (TCS) for Model Context Protocol agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Linus Teklenburg", email = "hey@linus-teklenburg.de" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "ai-governance",
    "iso42001",
    "nist-ai-rmf",
    "eu-ai-act",
    "attestation",
    "agentic-ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "pyyaml>=6.0",
    "rich>=13.7",
    "jsonschema>=4.21",
]

[project.optional-dependencies]
sign = ["sigstore>=3.0"]
mcp = ["mcp>=1.0"]
all = ["sigstore>=3.0", "mcp>=1.0"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "mypy>=1.10",
    "ruff>=0.5",
    "types-pyyaml",
    "types-jsonschema",
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[project.urls]
Homepage = "https://github.com/linus131313/mcp-governance-kit"
Repository = "https://github.com/linus131313/mcp-governance-kit"
Documentation = "https://linus131313.github.io/mcp-governance-kit/"
Issues = "https://github.com/linus131313/mcp-governance-kit/issues"
Paper = "https://github.com/linus131313/mcp-governance-kit/blob/main/paper/governance-speed-gap.pdf"

[project.scripts]
mcp-gov = "mcp_governance_kit.cli:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/mcp_governance_kit/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_governance_kit"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/examples",
    "/SPEC.md",
    "/README.md",
    "/CHANGELOG.md",
    "/LICENSE",
    "/LICENSE-docs",
    "/NOTICE",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "B",                # bugbear
    "UP",               # pyupgrade
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "N",                # pep8-naming
    "C4",               # comprehensions
    "PT",               # pytest-style
    "ARG",              # unused arguments
]
ignore = ["E501"]  # handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ARG", "PT011"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["sigstore.*", "mcp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_governance_kit",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "integration: integration tests (may call external services)",
    "slow: slow tests",
]

[tool.coverage.run]
source = ["src/mcp_governance_kit"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
